{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Player",
            "id": "895edf4e-b605-4b5a-8292-06ef400f79e3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0080f841-71d9-4cb1-bffe-4cf3e3ae256a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "2b520780-5289-45ba-afdc-fb18e172c895",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e93b05de-7186-4386-a4e5-b8a2d3e2fc25",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6974ea5b-cc55-445d-ac33-b9f1b539e659",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "63c5b3b4-9c52-4abb-9206-ca25bb655484",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "050ed212-276a-47a8-9375-b2d4e8e3de72",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "00c30109-6f31-42fc-8fa1-3b78e4d3860a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "580a726f-b7d2-4365-b072-5a7bc62c6d9f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5ec87573-337d-4504-9a9c-b8079c1cfc03",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8719de38-2755-4a26-8125-f8b246af45ce",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc0c57a9-a320-4f8e-b539-4987c9a2afea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6c19a66-b60d-4517-ba61-481d53b03f47",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4666d488-cb64-4c18-a226-ef73f46b1e16",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df466da4-df0b-4597-b2d7-41bdd3132713",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95524721-d7ca-4399-855c-a40459dec52c",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59029ee3-981a-4b46-a186-12280a4e450b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Editor",
            "id": "4b8d7b64-6f92-4fae-ba1b-39c8bdf6a08d",
            "actions": [
                {
                    "name": "EnableEditor",
                    "type": "Button",
                    "id": "1dd703ce-56a7-426b-869f-def5d55c7921",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddItem1",
                    "type": "Button",
                    "id": "2e542e26-343c-45de-a83f-7eae808ac640",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddItem2",
                    "type": "Button",
                    "id": "d49c1802-c8d1-4d62-9f50-9151acdfbf9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "2a3af6d4-e91b-4c16-a076-9d603f622639",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26eb5948-2d4e-47e2-a425-4af707ae45d8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableEditor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60e94311-a1e7-45a1-be72-e8f55af3bc2f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddItem1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82dc74a7-7b2f-43e6-b244-8fbfcb64f368",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddItem2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d5a6bfd-c605-4d55-8ef5-8bf09ce1e77c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}